# onepaas.slack-notify

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: push.yml
src/: main.rs
