[package]
name = "onepaas-slack-notify"
version = "0.1.0"
authors = ["uta8a <noumodulity@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
toml = "0.5.8"
serde = "1.0.97"
serde_derive = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-rustls = "0.22.1"